--- a/CardGame/resources.qrc
+++ b/CardGame/resources.qrc
@@ -1,7 +1,38 @@
 <RCC>
-    <qresource prefix="/images">
-        <file>kartya.jpg</file>
-        <file>tablecover.jpg</file>
+    <qresource prefix="/images"/>
+    <qresource prefix="/">
+        <file>../source/Makk10.png</file>
+        <file>../source/Makk7.png</file>
+        <file>../source/Makk8.png</file>
+        <file>../source/Makk9.png</file>
+        <file>../source/MakkAls.png</file>
+        <file>../source/MakkAsz.png</file>
+        <file>../source/MakkFel.png</file>
+        <file>../source/MakkKir.png</file>
+        <file>../source/Piros10.png</file>
+        <file>../source/Piros7.png</file>
+        <file>../source/Piros8.png</file>
+        <file>../source/Piros9.png</file>
+        <file>../source/PirosAl.png</file>
+        <file>../source/PirosAsz.png</file>
+        <file>../source/PirosFel.png</file>
+        <file>../source/PirosKiraly.png</file>
+        <file>../source/tablecover.jpg</file>
+        <file>../source/Tok10.png</file>
+        <file>../source/Tok7.png</file>
+        <file>../source/Tok8.png</file>
+        <file>../source/Tok9.png</file>
+        <file>../source/TokAls.png</file>
+        <file>../source/TokAsz.png</file>
+        <file>../source/TokFel.png</file>
+        <file>../source/TokKir.png</file>
+        <file>../source/Zold10.png</file>
+        <file>../source/Zold7.png</file>
+        <file>../source/Zold8.png</file>
+        <file>../source/Zold9.png</file>
+        <file>../source/ZoldAls.png</file>
+        <file>../source/ZoldAsz.png</file>
+        <file>../source/ZoldFel.png</file>
+        <file>../source/ZoldKir.png</file>
     </qresource>
-    <qresource prefix="/"/>
 </RCC>
