--- a/CardGame/resources.qrc
+++ b/CardGame/resources.qrc
@@ -13,10 +13,8 @@
         <file>../source/Piros7.png</file>
         <file>../source/Piros8.png</file>
         <file>../source/Piros9.png</file>
-        <file>../source/PirosAl.png</file>
         <file>../source/PirosAsz.png</file>
         <file>../source/PirosFel.png</file>
-        <file>../source/PirosKiraly.png</file>
         <file>../source/tablecover.jpg</file>
         <file>../source/Tok10.png</file>
         <file>../source/Tok7.png</file>
@@ -34,5 +32,7 @@
         <file>../source/ZoldAsz.png</file>
         <file>../source/ZoldFel.png</file>
         <file>../source/ZoldKir.png</file>
+        <file>../source/PirosAls.png</file>
+        <file>../source/PirosKir.png</file>
     </qresource>
 </RCC>
