added main menu, button class

--- a/CardGame/resources.qrc
+++ b/CardGame/resources.qrc
@@ -34,5 +34,6 @@
         <file>../source/ZoldKir.png</file>
         <file>../source/PirosAls.png</file>
         <file>../source/PirosKir.png</file>
+        <file>../source/hatlap.jpg</file>
     </qresource>
 </RCC>
